# picobricks-oled-embassy

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: char_generator.rs  main.rs
