[package]
name = "oled-test"
version = "0.1.0"
edition = "2021"


[dependencies]
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }

embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.1.0" }
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = { version = "0.4"}
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
ssd1306 = { version = "0.8.4" }

[profile.release]
debug = 2
